# std-t86

./: .gitignore  pyproject.toml  readme.md
contrib/sdrsharp-iq-tcp/: .gitignore  IqTcpServer.cs  IqTcpServerPanel.cs  IqTcpServerPlugin.cs  README.md  SDRSharp.IqTcpServer.csproj  build.ps1
scripts/: build_g7221.ps1  build_g7221.sh  gen_city_codes.py  patch_g7221_scodec.py
src/stdt86/: cli.py
src/stdt86/codec/: __init__.py  g7221.py  s_codec.py
src/stdt86/control/: channel.py
src/stdt86/data/: city_codes.py
src/stdt86/dsp/: __init__.py  burst.py  ddc.py  demod_16qam.py  iq_control.py  pulse.py  qam.py  spectrum.py  stream_decoder.py  stream_frontend.py  stream_slots.py
src/stdt86/fec/: __init__.py  convolutional.py  scrambler.py  seed_search.py
src/stdt86/io/: __init__.py  iq_loader.py  sources.py
src/stdt86/server/: app.py  audio.py  events.py  iq_recorder.py  pipeline.py  state.py
src/stdt86/server/static/: index.html
src/stdt86/viz/: __init__.py  constellation.py
